--- a/todo.txt
+++ b/todo.txt
@@ -4,3 +4,5 @@ TODO
 * Get rid of gridless.
 * Config options.
 * Responsive, Mobile-First.
+* A LESS version of grid.
+* Perhaps a Stylus version of grid.
